// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NorthArrow should match snapshot rotated. 1`] = `
<div class="rs-north-arrow"
     style="transform: rotate(45deg);"
>
  <svg data-file-name="SvgNorthArrow">
  </svg>
</div>
`;

exports[`NorthArrow should match snapshot with children. 1`] = `
<div class="rs-north-arrow"
     style="transform: rotate(0deg);"
>
  <svg stroke="currentColor"
       fill="currentColor"
       stroke-width="0"
       version="1.2"
       baseprofile="tiny"
       viewbox="0 0 24 24"
       height="1em"
       width="1em"
       xmlns="http://www.w3.org/2000/svg"
  >
    <circle cx="8.5"
            cy="8.5"
            r="2.5"
    >
    </circle>
    <path d="M16 10c-2 0-3 3-4.5 3s-1.499-1-3.5-1c-2 0-3.001 4-3.001 4h14.001s-1-6-3-6zM20 3h-16c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2v-12c0-1.103-.897-2-2-2zm0 14h-16v-12h16v12z">
    </path>
  </svg>
</div>
`;

exports[`NorthArrow should match snapshot with children. 2`] = `
<div class="rs-north-arrow"
     style="transform: rotate(0deg);"
>
  <svg stroke="currentColor"
       fill="currentColor"
       stroke-width="0"
       version="1.2"
       baseprofile="tiny"
       viewbox="0 0 24 24"
       height="1em"
       width="1em"
       xmlns="http://www.w3.org/2000/svg"
  >
    <circle cx="8.5"
            cy="8.5"
            r="2.5"
    >
    </circle>
    <path d="M16 10c-2 0-3 3-4.5 3s-1.499-1-3.5-1c-2 0-3.001 4-3.001 4h14.001s-1-6-3-6zM20 3h-16c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2v-12c0-1.103-.897-2-2-2zm0 14h-16v-12h16v12z">
    </path>
  </svg>
</div>
`;

exports[`NorthArrow should match snapshot with circle. 1`] = `
<div class="rs-north-arrow"
     style="transform: rotate(0deg);"
>
  <svg data-file-name="SvgNorthArrowCircle">
  </svg>
</div>
`;

exports[`NorthArrow should match snapshot with custom attributes. 1`] = `
<div class="test-class"
     tabindex="0"
     style="transform: rotate(0deg);"
>
  <svg data-file-name="SvgNorthArrow">
  </svg>
</div>
`;

exports[`NorthArrow should match snapshot with default value. 1`] = `
<div class="rs-north-arrow"
     style="transform: rotate(0deg);"
>
  <svg data-file-name="SvgNorthArrow">
  </svg>
</div>
`;

exports[`NorthArrow should react on view rotation (transform: \`rotate(20deg)\`) 1`] = `
<div class="rs-north-arrow"
     style="transform: rotate(20deg);"
>
  <svg data-file-name="SvgNorthArrow">
  </svg>
</div>
`;

exports[`NorthArrow should react on view rotation with offset (transform: \`rotate(10deg)\`) 1`] = `
<div class="rs-north-arrow"
     style="transform: rotate(10deg);"
>
  <svg data-file-name="SvgNorthArrow">
  </svg>
</div>
`;
